Fixed the blocker error, using URI instead of URL.
git-svn-id: https://svn.apache.org/repos/asf/directory/studio/trunk@1696904 13f79535-47bb-0310-9956-ffa450edef68